trunk/Archive2/79/b60e91d6a85898/output
main.cpp:1:48: error: expected initializer before 'throw'
 #define throw(...) __attribute__((deprecated)) throw(__VA_ARGS__)
                                                ^
main.cpp:8:10: note: in expansion of macro 'throw'
 void g() throw(int)
          ^
